# LawersSimpleChat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  middleware.ts  next.config.mjs  package-lock.json  package.json
app/: globals.css  (+4 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  utils.py
backend/app/config/: app.yaml  chat.yaml  config.yaml  logging.yaml  recognition.yaml
backend/app/pipelines/: messages.py  nodes.py  state.py  tools.py  workflows.py
backend/app/rag_core/: caching.py  llm.py  persistence.py  prompt.py  proxy.py
backend/app/search/: __init__.py  case_types.py  client.py  index.py  regions.py  rrf.py  search.py
backend/app/server/: chat_stream.py  main.py  schema.py  security.py
backend/app/services/: document_extraction.py  docx_builder.py  docx_drafting.py  llm_extractor.py  s3_client.py  supabase_repo.py
backend/infra/: coi-user-data.yaml
backend/scripts/: index_court_practice.py
backend/tests/: test_caching.py  test_case_types.py  test_chat_stream.py  test_document_extraction.py  test_documents_endpoint.py  test_docx_builder.py  test_docx_drafting.py  test_drafting_tool.py  test_generate_fallback.py  test_graph_routing.py  test_index_normalize.py  test_indexing_script.py  test_llm_extractor.py  test_messages.py  test_pdf_gate.py  test_proxy.py  test_recognizer_factory.py  test_recognizer_fallback.py  test_recognizer_llm.py  test_recognizer_sotaocr.py  test_regions.py  test_rrf.py  test_search_tool.py  test_tool_registry.py
(+111 files in other folders)
